Add various containers to index.html, add structure via style.css

--- a/index.html
+++ b/index.html
@@ -7,69 +7,77 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="top">
-        <div class="header">
-            <div class="logo">
-                Header Logo
+
+
+
+    <div class="header">
+            <p class="header-logo">Header Logo</p>     
+            <div class="header-links">       
+                <a class="header-link" href="#">header link 1</a>
+                <a class="header-link" href="#">header link 2</a>
+                <a class="header-link" href="#">header link 3</a>
             </div>
-            <div class="links">
-                <a href="#">header link 1</a>
-                <a href="#">header link 2</a>
-                <a href="#">header link 3</a>
-            </div>
+    </div>
+
+    <div class="main">
+
+    <div class="hero">
+        <div class="left-hero">
+            <div class="hero-big">This website is awesome</div>
+            <div class="hero-subtext">This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast</div>
+            <button class="sign-up">Sign up</button>
         </div>
-        <div class="main">
-            <div class="main-sub">
-                <div class="title">
-                    This website is awesome
-                </div>
-                <div class="subtext">
-                    This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast
-                </div>
-                <div class="sign-up-button">
-                    <button>Sign up</button>
-                </div>
-            </div>
-            <img src="pexels-valentinos-loucaides-15665644.jpg">
+        <div class="container-hero-img">
+            <img class="hero-img" src="pexels-valentinos-loucaides-15665644.jpg">
         </div>
     </div>
+
+
     <div class="information">
-        <div class="random-info">
-            Some random information.
-        </div> 
-        <div class="images">
-            <div class="img-subtext">
-                <img src="pexels-brunno-rodrigues-9559543.jpg">
-                <div class="subtitle">This is some subtext under an illustration or image</div>
+        <div class="random-info">Some random information.</div> 
+        <div class="multi-card">
+            <div class="card">
+                <img class="card-img" src="pexels-brunno-rodrigues-9559543.jpg">
+                <div class="card-subtitle">This is some subtext under an illustration or image</div>
             </div>
-            <div class="img-subtext">
-                <img src="pexels-brunno-rodrigues-9559543.jpg">
-                <div class="subtitle">This is some subtext under an illustration or image</div>
+            <div class="card">
+                <img class="card-img" src="pexels-brunno-rodrigues-9559543.jpg">
+                <div class="card-subtitle">This is some subtext under an illustration or image</div>
             </div>
-            <div class="img-subtext">
-                <img src="pexels-brunno-rodrigues-9559543.jpg">
-                <div class="subtitle">This is some subtext under an illustration or image</div>
+            <div class="card">
+                <img class="card-img" src="pexels-brunno-rodrigues-9559543.jpg">
+                <div class="card-subtitle">This is some subtext under an illustration or image</div>
             </div>
-            <div class="img-subtext">
-                <img src="pexels-brunno-rodrigues-9559543.jpg">
-                <div class="subtitle">This is some subtext under an illustration or image</div>
+            <div class="card">
+                <img class="card-img" src="pexels-brunno-rodrigues-9559543.jpg">
+                <div class="card-subtitle">This is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
+
+
     <div class="quote">
-        <div class="quote-text">
-            This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.
-        </div>
-        <div class="quote-author">
-            -Thor, God of Thunder
-        </div>
+        <div class="quote-text">This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quote-author">-Thor, God of Thunder</div>
     </div>
+
+
     <div class="call-to-action">
-         Call to action! It's time! Sign up for our product by clicking that button over there!
-        <button>Sign up</button>
+        <div class="call-to-action-container">
+            <div class="call-to-action-text">
+                <div class="call-to-action-header">Call to action! It's time!</div>
+                <div class="call-to-action-subtext">Sign up for our product by clicking that button over there!</div>
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
     </div>
+    
+    </div>
+
     <div class="footer">
         Copyright The Odin Project 2021
     </div>
+
+
 </body>
 </html>
