--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 
 
     <div class="quote">
+        <div class="quote-container">
         <div class="quote-text">This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
     </div>
 
 
@@ -68,7 +70,7 @@
                 <div class="call-to-action-header">Call to action! It's time!</div>
                 <div class="call-to-action-subtext">Sign up for our product by clicking that button over there!</div>
             </div>
-            <button class="sign-up">Sign up</button>
+            <button class="call-to-action-button">Sign up</button>
         </div>
     </div>
     
